ensure last token is visible on scroll

--- a/src/components/Global/Account/AccountTabs/Wallet/Wallet.module.css
+++ b/src/components/Global/Account/AccountTabs/Wallet/Wallet.module.css
@@ -3,7 +3,7 @@
 }
 
 .item_container {
-    height: 100%;
+    height: calc(100% - 24px);
     overflow-y: scroll;
     overflow-x: hidden;
     padding: 0 8px;
